updated css file missed when fixing fullbleed post style

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -2440,8 +2440,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
   font-size: 16px;
   background-color: #000000;
 }
-.post-data.img-full-bleed {
-  background-size: contain;
+.post-data.img-fullbleed {
+  background-size: cover;
   background-position: center center;
 }
 @media (max-width: 960px) {
